--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "Run your Bitbucket Pipelines locally",
   "main": "index.js",
+  "preferGlobal": true,
+  "bin": "./index.js",
   "scripts": {
     "prettier": "prettier --write *.js src/*.js test/*.js",
     "test": "jest"
