added Travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 sudo: false 
 node_js:
   - "8"
+cache:
+  directories:
+    - node_modules
 script:
   - npm install && npm test
 deploy:
