--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
     - node_modules
 script:
-  - npm version minor
+  - npm install
 deploy:
   provider: npm
   skip_cleanup: true
